--- a/build.gradle
+++ b/build.gradle
@@ -75,5 +75,9 @@ dependencies {
     compile "com.google.dagger:dagger:2.10"
     apt "com.google.dagger:dagger-compiler:2.10"
     compile 'com.intellij:forms_rt:6.0.5'
-
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.intellij:annotations:9.0.4'
+    compile 'log4j:log4j:1.2.17'
+    compile 'com.google.zxing:javase:3.3.0'
 }
