Deleted unnecessary code and added DevicePairingWorker class

--- a/src/main/resources/config/defaultconfig.properties
+++ b/src/main/resources/config/defaultconfig.properties
@@ -21,7 +21,8 @@ minWidth=800
 minHeight=550
 # Network settings
 port=8899
-multicastGroupAddress=203.0.113.0
+multicastGroupAddress=224.0.12.34
 # FXML resource files
 mainMenuFxml=/fxml/MainMenu.fxml
 version=1
+timeout=10000
