added code to send periodic UDP multicast beacon

--- a/src/main/resources/config/defaultconfig.properties
+++ b/src/main/resources/config/defaultconfig.properties
@@ -19,9 +19,12 @@ defaultWidth=800
 defaultHeight=550
 minWidth=800
 minHeight=550
+
 # Network settings
 port=8899
 multicastGroupAddress=224.0.12.34
+beaconFrequency=5
+
 # FXML resource files
 mainMenuFxml=/fxml/MainMenu.fxml
 version=1
