--- a/build.gradle
+++ b/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     compile 'com.intellij:annotations:9.0.4'
     compile 'log4j:log4j:1.2.17'
     compile 'com.google.zxing:javase:3.3.0'
+    // sqlite and connection pool
+    compile "com.mchange:c3p0:0.9.2.1"
+    compile "org.xerial:sqlite-jdbc:3.19.3"
 }
