--- a/src/main/resources/config/defaultconfig.properties
+++ b/src/main/resources/config/defaultconfig.properties
@@ -32,3 +32,8 @@ timeout=10000
 
 #database settings
 dbName = database.db
+
+#paths
+kvPath = .PhoneMirror/kvpairs.dat
+pkPath =  .PhoneMirror/privatekey
+pubkPath = .PhoneMirror/publickey
